--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Complete the Gene!</title>
+		<title>Complete the gene!</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Complete the Gene!</h1>
+			<h1>Complete the gene!</h1>
 		</header>
 			<section id="content">
 				<canvas id="OriginalDesign" data-processing-sources="OriginalDesign.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Insert Adenosine
+		    Click to add nitrogenous bases!
 	    </footer>
 	</body>
 </html>
